--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,14 @@
-.venv
+# Environment Variables
 .env
+
+# Python cache
+__pycache__/
+
+# pytest
+.pytest_cache/
+
+# Virtual environments
+.venv/
+
+# IDE files
+.vscode/
