--- a/.env.example
+++ b/.env.example
@@ -12,11 +12,15 @@ API_PORT=8000
 API_RELOAD_DIR=API
 
 # ===========================================
-# PostgreSQL Database Configuration
+# Neo4j Database Configuration
 # ===========================================
-DB_NAME=course_gpt
-DB_HOST=localhost
-DB_PORT=5432
-DB_USER=postgres
-DB_PASSWORD=postgres
+NEO4J_URI=bolt://localhost:7687
+NEO4J_USER=neo4j
+NEO4J_PASSWORD=password
+
+# ===========================================
+# Security / CORS
+# ===========================================
+# The URL of your frontend application (e.g., https://myapp.netlify.app)
+FRONTEND_URL=http://localhost:5173
 
