refactor: Rename `API_PORT` to `PORT` across configuration files and add default variable definitions in Makefile.

--- a/.env.example
+++ b/.env.example
@@ -8,7 +8,7 @@ REQ_FILE=requirements.txt
 # FastAPI Server Configuration
 # ===========================================
 API_HOST=localhost
-API_PORT=8000
+PORT=8000
 API_RELOAD_DIR=API
 
 # ===========================================
