--- a/render.yaml
+++ b/render.yaml
@@ -7,11 +7,8 @@ services:
     envVars:
       - key: PYTHON_VERSION
         value: 3.11.0
-      - key: NEO4J_URI
-        sync: false
-      - key: NEO4J_USER
-        sync: false
-      - key: NEO4J_PASSWORD
-        sync: false
       - key: FRONTEND_URL
-        sync: false
+        fromService:
+          type: web
+          name: sportsgraph-frontend
+          property: url
